# shapr3d_task

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
app/: CMakeLists.txt  main.cpp
geomio/: CMakeLists.txt  Mesh.cpp  Mesh.h  MeshImporter.h  MeshTriangulator.cpp  MeshTriangulator.h  ObjMeshImporter.cpp  ObjMeshImporter.h  StlMeshExporter.cpp  StlMeshExporter.h
geomio/tests/: CMakeLists.txt  MeshTriangulator_test.cpp  Mesh_test.cpp  ObjMeshImporter_test.cpp  StlMeshExporter_test.cpp  TestUtils.h
